Add links from item card to item page
- Add Header link, when clicked, to redirect back to "/"
- Adjust styling for links
- Add responsive styling to Item Page

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,4 +11,13 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+
+  a {
+    color: white;
+    text-decoration: none;
+  }
+}
+
+a {
+  text-decoration: none;
 }
