Add login page and google oauth button

--- a/src/components/UI/Page.scss
+++ b/src/components/UI/Page.scss
@@ -7,6 +7,10 @@
     overflow-y: hidden;
 }
 
+.page--theme {
+    background-color: $theme-color;
+}
+
 @media (max-width: 600px) {
     .page {
         padding: 20px 40px;
