Create Authenticated and Unauthenticated App
Frontend Authentication strategy uses 2 Apps: AuthenticatedApp (public + private routes) and UnauthenticatedApp (public routes only). Depending on whether there is a "token" in local storage, it will render the correct app which allows access to public vs private routes accordingly.

- Update AuthenticatedApp to render children props, which is used by UnautheticatedApp to add "secure" additional Routes.
- Live navigating and testing in the browser works, and created a unit test that uses MemoryRouter to mock navigate to a /test route and see the rendered page.

--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -3,11 +3,10 @@
 .login--container {
     background-color: white;
     width: 400px;
-    padding: 140px 20px 0px 30px;
+    padding: 40px 30px;
     border-radius: 6px;
     box-shadow: $box-shadow-blue;
-    margin: 30% auto;
-    height: 200px;
+    margin: 20% auto;
     justify-items: center;
     align-items: center;
 }
