Create Authenticated and Unauthenticated Header
Header component checks localstorage for a user key, and if exists, renders a AuthenticatedHeader which currently has a placeholder avatar and logout route. If user does not exist, then it will render a UnauthenticatedHeader which holds a login link.

--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -6,7 +6,13 @@
     padding: 40px 30px;
     border-radius: 6px;
     box-shadow: $box-shadow-blue;
-    margin: 20% auto;
+    margin: 100px auto;
     justify-items: center;
     align-items: center;
+
+    h1 {
+        text-align: center;
+        color: $dark-grey;
+        margin-top: -10px;
+    }
 }
