Update Login Authentication Strategy
Previous Strategy: Allow frontend to communicate with Google, retrieve profile information and token, then return to backend.

Current Strategy: User clicks a button which navigates to a server route (/auth/google), does the info transfer with google, then redirects back to the client login route with a token stored in the cookies (to verify the user against the server for future requests)  and the user UUID stored in the route. From here, the frontend then parses the information and makes another call to the API for more user information. User data is then stored in local storage.

--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -15,4 +15,19 @@
         color: $dark-grey;
         margin-top: -10px;
     }
+
+    .google-btn {
+        background-color: $theme-color;
+        border: none;
+        box-shadow: $box-shadow;
+        padding: 20px;
+        width: 100%;
+        cursor: pointer;
+        
+        color: white;
+        font-size: 16px;
+        font-weight: 700;
+        text-align: center;
+        text-transform: capitalize;
+    }
 }
