--- a/src/components/UI/Page.scss
+++ b/src/components/UI/Page.scss
@@ -8,7 +8,7 @@
 }
 
 .page--theme {
-    background-color: $theme-color;
+    background-image: $theme-color--gradient;
 }
 
 @media (max-width: 600px) {
