--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -29,7 +29,8 @@ $palest-grey: #f8f8f8;
 
 $theme-color: #2186EB;
 $theme-color--light: #E5F6FF;
-$theme-color--dark: rgb(29, 125, 221);
+$theme-color--dark: rgb(22, 100, 179);
+$theme-color--gradient:  linear-gradient(30deg, $theme-color--dark, $theme-color);
 $page-background: #F5F7FA;
 
 /*
