--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -33,6 +33,8 @@ $theme-color--dark: rgb(22, 100, 179);
 $theme-color--gradient:  linear-gradient(30deg, $theme-color--dark, $theme-color);
 $page-background: #F5F7FA;
 
+$attention-red: rgb(236, 82, 71);
+
 /*
 ==========================
 STYLING
