Create User Bids Page
Note: Users Bids Page is currently rendering a demo page using mock data. A live component is ready as well, but haven't been tested with the backend yet.

- Create UserBids component which calls the API for a users bids, and renders the User Bids Page
- Create UserBidCard which renders an ItemCard and a additional bid information component below it.
- Add a date formatter utility function to date.js
- Update App to add new user route "/user/:uuid/bids"
- Update ItemsPage to accept a prop title, as its being used to render the All Items Page and User Bids Page. We are using it specifically to render multiple item cards, and already has 3x grid and responsive design setup
- Update Header with new hard-coded link to the user bids page.

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -42,7 +42,7 @@
 
     display: grid;
     grid-auto-flow: column;
-    grid-gap: 20px;
+    grid-gap: 30px;
     align-items: center;
 
     a {
@@ -61,5 +61,8 @@
     border: none;
     background-color: white;
     box-shadow: none;
+    font-size: 14px;
+    font-weight: 600;
+    color: $dark-grey;
     cursor: pointer;
 }
