--- a/src/components/item_card/ItemCard.scss
+++ b/src/components/item_card/ItemCard.scss
@@ -17,11 +17,15 @@
                          "end_date end_date price";
     justify-items: center;
     align-items: start;
+    position: relative;
+    z-index: 2;
 
     h1 {
         grid-area: title;
         font-size: 16px !important;
         min-height: 75px;
+        justify-self: start;
+        margin: 30px 0px !important;
     }
 
     h2 {
@@ -36,7 +40,7 @@
     img {
         grid-area: image;
         object-fit: contain;
-        width: auto;
+        width: 100%;
         height: 250px;
     }
 
