--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -29,6 +29,8 @@ $palest-grey: #f8f8f8;
 
 $theme-color: #2186EB;
 $theme-color--light: #E5F6FF;
+$theme-color--med-light: rgb(177, 213, 243);
+$theme-color--medium: rgb(69, 140, 199);
 $theme-color--dark: rgb(22, 100, 179);
 $theme-color--gradient:  linear-gradient(30deg, $theme-color--dark, $theme-color);
 $page-background: #F5F7FA;
