Connect Item Creation to API
To properly send data to the backend, we had to reformat the date string we were sending back (server needs ISOString, so it can format to utc_datetime).

We also needed to set "withCredentials" in axios, as while without it, we can see authenticated cookies in our request headers, it never seemed to make it to the server correctly (it always seemed empty).

- Refactor ordering of Routes. It's important to render that since this is a SwitchRouter, it will render the first true path match. So putting "/" near the top means that it will always render that first, and not get to the matching routes below
- Comment out App test as while functionality for Auth and Unauth App works in browser, its refusing to test properly with MemoryRouter for some reason
- Create Error component
- Update CreateItemPage to submit form values to API. It uses local storage to save form data if there was an error, so user's don't have to constantly retype the form in the case of a server error
- Update Item to only fetch from API onMount. When we added dependencies of item (amonng others), it would fetch API data conitnuously
- Update date formatting to be ISOString as it is one of the few formats that the Elixir backend can then parse and format to a utc datetime

--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -34,7 +34,7 @@ $theme-color--gradient:  linear-gradient(30deg, $theme-color--dark, $theme-color
 $page-background: #F5F7FA;
 
 $attention-red: rgb(236, 82, 71);
-
+$attention-red--light: rgb(250, 230, 228);
 /*
 ==========================
 STYLING
