--- a/src/components/item_card/ItemCard.scss
+++ b/src/components/item_card/ItemCard.scss
@@ -62,12 +62,17 @@
         color: $med-grey;
         font-weight: 500;
         text-align: left;
-        margin-top: -70px;
+        margin-top: -60px;
         margin-bottom: 20px;
 
         display: -webkit-box;
         -webkit-line-clamp: 3;
         -webkit-box-orient: vertical;  
+
+        max-height: 100px;
+        text-overflow: ellipsis;
+        white-space: wrap;
+        overflow: hidden;
     }
 }
 
