--- a/src/components/user_bids_page/UserBidCard.scss
+++ b/src/components/user_bids_page/UserBidCard.scss
@@ -5,15 +5,40 @@
     .item--card-container {
         border-radius: 6px 6px 0px 0px;
     }
+
+    .user-bids--grid {
+        &:last-child {
+            border-radius: 6px;
+        }
+    }
+}
+
+.no-bids {
+    display: block;
+    text-transform: capitalize;
+    font-weight: 600;
+    font-size: 26px;
+    text-align: center;
+    color: $med-grey;
+    background-color: white;
+    box-shadow: $box-shadow;
+    border-radius: 6px;
+    padding: 40px;
+    width: 95%;
+    margin: 0 auto;
+    grid-column: 1 / -1;
+
+    p {
+        font-size: 18px;
+        margin: 0 auto;
+    }
 }
 
 .bid--container {
     background-color: $theme-color--med-light;
     box-shadow: $box-shadow;
-    padding: 40px 20px 10px 20px;
+    padding: 10px 20px 10px 20px;
     color: $dark-grey;
-    margin-top: -40px;
-    border-radius: 6px;
     position: relative;
     z-index: 1;
     display: grid;
@@ -21,6 +46,7 @@
     justify-items: start;
     align-items: center;
     text-align: left;
+    margin-bottom: 5px;
 
     .bid--container-info {
         grid-column: 1 / 3;
@@ -51,4 +77,6 @@
         justify-self: start;
         margin: 30px 0px !important;
     }
+
+
 }
