--- a/src/components/create_item/CreateItemPage.scss
+++ b/src/components/create_item/CreateItemPage.scss
@@ -48,6 +48,10 @@
       padding: 5px;
       font-size: 14px;
       background-color: white;
+      &:disabled {
+        background-color: $pale-grey;
+        cursor: not-allowed;
+      }
     }
 
     textarea {
