Create My Items Page
API route is currently sending back all items, not just items scoped to user. Regardess, the frontend component will not need to change.

- Created UserItems Page
- Create UserItemsCard which renders the item card as well as a Item Controller component. Currently, there is a Edit button which will take the user to the edit item page. There is also a placeholder Delete button which does not trigger any actions at the moment.

--- a/src/components/all_items_page/ItemsPage.scss
+++ b/src/components/all_items_page/ItemsPage.scss
@@ -18,7 +18,7 @@
     grid-gap: 30px;
 
     align-items: start;
-    justify-items: center;
+    justify-items: stretch;
 }
 
 @media (max-width: 1180px) {
