Create My Items Page
API route is currently sending back all items, not just items scoped to user. Regardess, the frontend component will not need to change.

- Created UserItems Page
- Create UserItemsCard which renders the item card as well as a Item Controller component. Currently, there is a Edit button which will take the user to the edit item page. There is also a placeholder Delete button which does not trigger any actions at the moment.

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -86,3 +86,11 @@
         background-color: $theme-color--light;
     }
 }
+
+@media (max-width: 600px) {
+    .header {
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+    }
+}
