--- a/src/components/item_page/ItemPage.scss
+++ b/src/components/item_page/ItemPage.scss
@@ -30,9 +30,32 @@
   }
   
   .item-bidding-info {
-    padding: 30px;
+    padding: 10px;
     background-color: $theme-color--light;
     font-weight: 600;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: stretch;
+    h1 {
+      color: $theme-color;
+      font-size: 48px;
+      font-weight: 700;
+    }
+
+    h3 {
+      color: $grey;
+      text-transform: uppercase;
+      margin-top: -20px;
+      font-size: 12px;
+    }
+
+    h4 {
+      color: $med-grey;
+      font-weight: 700;
+      font-size: 14px;
+      margin-top: -5px;
+    }
   }
   
   .item-description, .item-title {
