Styling and UI Refactor per feedback
- Only render at most 3 user bids per item
- Update date formatting to use 12HR clock and convert to local time.
- Update time remaining message to use "days" and "hrs" plural when there are multiple days and/or hours
- Toggle between rendering "You" vs "Someone" bid message in item pages
- Disable form button if there are form errors

--- a/src/components/user_bids_page/UserBidCard.scss
+++ b/src/components/user_bids_page/UserBidCard.scss
@@ -3,6 +3,19 @@
 .user-bid--container {
     .item--card-container {
         border-radius: 6px 6px 0px 0px;
+
+        h1 {
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;  
+    
+            min-height: 65px !important;
+            max-height: 65px !important;
+            text-overflow: ellipsis;
+            white-space: pre-line;
+            overflow: hidden !important;
+            margin-bottom: 70px !important;
+        }
     }
 
     .user-bids--grid {
