--- a/src/components/UI/FormContainer.scss
+++ b/src/components/UI/FormContainer.scss
@@ -75,5 +75,10 @@
     &:hover {
       background-color: $theme-color--dark;
     }
+
+    &:disabled {
+      background-color: $grey;
+      cursor: not-allowed;
+    }
   }
   
