--- a/src/components/item_page/ItemPage.scss
+++ b/src/components/item_page/ItemPage.scss
@@ -10,6 +10,7 @@
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 30px;
   justify-items: stretch;
+  grid-auto-flow: row dense;
 
   img {
     grid-column: 1 / 2;
