Add AutoBid feature to ItemBidForm
- Create button controllers that toggles between Single Bid and Auto Bid Mode
- Auto Bid mode takes 2 inputs: minimum and maximum bids. Maximum bids cannot be less than minimum bid.
- Update FormHasErrors conditional in useForm. It was previously using a "every" check which actually did not work. This had to be switched to "some" iterator check.
- Added autoBidPrice validation. The error that will check max price is higher than minimum price will only trigger after hitting the submit button. This is because useForm only checks the individual input field on input change. Then, it will pass in the entire form values after clicking Submit for a validation check with all fields accessible.

--- a/src/components/UI/FormContainer.scss
+++ b/src/components/UI/FormContainer.scss
@@ -49,6 +49,9 @@
           background-color: $pale-grey;
           cursor: not-allowed;
         }
+        &::placeholder {
+          color: $grey;
+        }
       }
   
       textarea {
